change keys of  switch panes in tmuex

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,10 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes 
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+bind k select-pane -U
+bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
 
 
 #enable mouse control
